# oa

./: .gitignore  CMakeLists.txt
codeforces/: 1722G.cpp  CMakeLists.txt
oa/: CMakeLists.txt  k_seq.cpp  max_sub_array.cpp  test_que.cpp
sfjs/: CMakeLists.txt
sfjs/edition2/: segmentTree1  segmentTree1.cpp  segmentTree2.cpp  segmentTree3.cpp  segmentTree4.cpp  setmentTree2.cpp
src/: 1649.cpp  CMakeLists.txt
src/leetcode/: 1203.cpp  132.cpp  1340.cpp  1489.cpp  1675.cpp  2321.cpp  2322.cpp  2328.cpp  312.cpp  391.cpp  483.cpp  502.cpp  514.cpp  6143.cpp  6169.cpp  6170.cpp  6206.cpp  6216.cpp  652.cpp  670.cpp  726.cpp  753.cpp  76.cpp  828.cpp
src/leetcode/319/: a.cpp  d.cpp
template/: math.cpp  pow.cpp
uva/: 10047.cpp  CMakeLists.txt  大纲.md
